# utf8_to_windows31j_cvt_checker

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: build.yml  test.yml
include/: linter.hpp  utf8_to_windows31j_cvt_checker.hpp  utf8_to_windows31j_cvt_chekcer.hpp
src/: CMakeLists.txt  utf8_to_windows31j_cvt_checker.cpp  utf8_to_windows31j_cvt_chekcer.cpp
test/: CMakeLists.txt  linter_test.cpp  test.cpp  utf8_to_windows31j_cvt_checker_test.cpp
test/inputs/: fail1.txt  success1.txt
